syntax = "proto3";
package shippings;
option go_package = "./shippings";

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

enum ServiceName { PingShippings = 0; }

service ShippingsService {
  rpc PingShippings(google.protobuf.Empty) returns (GrpcResponse) {}
}

message GrpcResponse {
  int32 stat_code = 1;
  string stat_message = 2;
  optional google.protobuf.Any data = 3;
}